--- a/vino-eureka-server/vino-eureka/pom.xml
+++ b/vino-eureka-server/vino-eureka/pom.xml
@@ -24,6 +24,7 @@
 		
 	</dependencies>
 	<build>
+		<finalName>vino-eureka</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
