--- a/vino-eureka-config-server-client/src/main/resources/bootstrap.properties
+++ b/vino-eureka-config-server-client/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ spring.cloud.config.label=master
 spring.cloud.config.profile=dev
 #spring.cloud.config.uri= http://localhost:8888/
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://47.104.128.1:8761/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 server.port=8885
