--- a/vino-eureka-server/vino-eureka-config-server/src/main/resources/application.properties
+++ b/vino-eureka-server/vino-eureka-config-server/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.cloud.config.label=master
 #spring.cloud.config.password=lby1357982
 spring.cloud.config.server.git.username=
 spring.cloud.config.server.git.password= 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://47.104.128.1:8761/eureka/
