--- a/vino-eureka-config-server-client/src/main/resources/bootstrap.yml
+++ b/vino-eureka-config-server-client/src/main/resources/bootstrap.yml
@@ -23,5 +23,5 @@ eureka:
     lease-expiration-duration-in-seconds: 20
   client:
     serviceUrl:
-      defaultZone: http://47.104.128.1:8761/eureka
+      defaultZone: http://vinohsueh:lby1357982@47.104.128.1:8761/eureka
     registry-fetch-interval-seconds: 10
