--- a/vino-eureka-config-server-client/src/main/resources/bootstrap.yml
+++ b/vino-eureka-config-server-client/src/main/resources/bootstrap.yml
@@ -14,7 +14,14 @@ spring:
       discovery:
         service-id: config-server
         enabled: true
-      
+
+management:
+  security:
+    enabled: false
+
+info:
+  app:
+    name: lby
 
 eureka:
   instance:
@@ -25,3 +32,11 @@ eureka:
     serviceUrl:
       defaultZone: http://vinohsueh:lby1357982@localhost:8761/eureka
     registry-fetch-interval-seconds: 10
+
+#rabbitmq:
+   #   host: localhost
+   #   port: 5672
+      #username: guest
+      #password: guest
+
+
