--- a/vino-eureka-server/vino-eureka/pom.xml
+++ b/vino-eureka-server/vino-eureka/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>com.vino.shop</groupId>
 		<artifactId>vino-eureka-server</artifactId>
-		<version>${vino.version}</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<properties>
